--- a/src/output.css
+++ b/src/output.css
@@ -9660,6 +9660,115 @@ html:has(.drawer-open.drawer-open) {
   transition-duration: 300ms;
 }
 
+/* 
+  Products Page }
+  header
+   */
+
+.header_products {
+  height: auto;
+  width: 100%;
+  padding: 1.25rem;
+}
+
+.products_image {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.75rem;
+}
+
+.img_satu {
+  height: 290px;
+  width: 100%;
+  border-radius: 0.5rem;
+}
+
+.img_satu img {
+  height: 100%;
+  width: 100%;
+  border-radius: 0.5rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.other_preview {
+  display: flex;
+  height: auto;
+  width: 100%;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.other_img {
+  height: 106px;
+  width: 111px;
+  border-radius: 0.5rem;
+}
+
+.other_img img {
+  height: 100%;
+  width: 100%;
+  border-radius: 0.5rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.rating:not(:checked) > input {
+  position: absolute;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-style: none;
+}
+
+.rating:not(:checked) > label {
+  float: right;
+  cursor: pointer;
+  fill: #E5E7EB;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+.rating:not(:checked) > label > i {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+.rating > input:checked + label:hover,
+  .rating > input:checked + label:hover ~ label,
+  .rating > input:checked + label:hover,
+  .rating > input:checked + label:hover ~ label,
+  .rating > input:checked + label:hover ~ label {
+  fill: #FACA15;
+  --tw-text-opacity: 1;
+  color: rgb(250 202 21 / var(--tw-text-opacity));
+}
+
+.rating:not(:checked) > label:hover,
+  .rating:not(:checked) > label:hover ~ label {
+  fill: #FACA15;
+  --tw-text-opacity: 1;
+  color: rgb(250 202 21 / var(--tw-text-opacity));
+}
+
+.rating > input:checked ~ label > i {
+  fill: #FACA15;
+  --tw-text-opacity: 1;
+  color: rgb(250 202 21 / var(--tw-text-opacity));
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
