--- a/src/output.css
+++ b/src/output.css
@@ -549,41 +549,6 @@ html {
   --bc: 27.8078% 0.029596 256.847952;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    color-scheme: dark;
-    --in: 72.06% 0.191 231.6;
-    --su: 64.8% 0.150 160;
-    --wa: 84.71% 0.199 83.87;
-    --er: 71.76% 0.221 22.18;
-    --pc: 13.138% 0.0392 275.75;
-    --sc: 14.96% 0.052 342.55;
-    --ac: 14.902% 0.0334 183.61;
-    --inc: 0% 0 0;
-    --suc: 0% 0 0;
-    --wac: 0% 0 0;
-    --erc: 0% 0 0;
-    --rounded-box: 1rem;
-    --rounded-btn: 0.5rem;
-    --rounded-badge: 1.9rem;
-    --animation-btn: 0.25s;
-    --animation-input: .2s;
-    --btn-focus-scale: 0.95;
-    --border-btn: 1px;
-    --tab-border: 1px;
-    --tab-radius: 0.5rem;
-    --p: 65.69% 0.196 275.75;
-    --s: 74.8% 0.26 342.55;
-    --a: 74.51% 0.167 183.61;
-    --n: 31.3815% 0.021108 254.139175;
-    --nc: 74.6477% 0.0216 264.435964;
-    --b1: 25.3267% 0.015896 252.417568;
-    --b2: 23.2607% 0.013807 253.100675;
-    --b3: 21.1484% 0.01165 254.087939;
-    --bc: 74.6477% 0.0216 264.435964;
-  }
-}
-
 [data-theme=light] {
   color-scheme: light;
   --in: 72.06% 0.191 231.6;
@@ -650,15 +615,18 @@ html {
   --bc: 27.8078% 0.029596 256.847952;
 }
 
-[data-theme=dark] {
-  color-scheme: dark;
+[data-theme=fantasy] {
+  color-scheme: light;
+  --b2: 93% 0 0;
+  --b3: 86% 0 0;
   --in: 72.06% 0.191 231.6;
   --su: 64.8% 0.150 160;
   --wa: 84.71% 0.199 83.87;
   --er: 71.76% 0.221 22.18;
-  --pc: 13.138% 0.0392 275.75;
-  --sc: 14.96% 0.052 342.55;
-  --ac: 14.902% 0.0334 183.61;
+  --pc: 87.49% 0.0378 325.02;
+  --sc: 90.784% 0.0324 241.36;
+  --ac: 15.196% 0.0408 56.72;
+  --nc: 85.5616% 0.005919 256.847952;
   --inc: 0% 0 0;
   --suc: 0% 0 0;
   --wac: 0% 0 0;
@@ -672,26 +640,26 @@ html {
   --border-btn: 1px;
   --tab-border: 1px;
   --tab-radius: 0.5rem;
-  --p: 65.69% 0.196 275.75;
-  --s: 74.8% 0.26 342.55;
-  --a: 74.51% 0.167 183.61;
-  --n: 31.3815% 0.021108 254.139175;
-  --nc: 74.6477% 0.0216 264.435964;
-  --b1: 25.3267% 0.015896 252.417568;
-  --b2: 23.2607% 0.013807 253.100675;
-  --b3: 21.1484% 0.01165 254.087939;
-  --bc: 74.6477% 0.0216 264.435964;
+  --p: 37.45% 0.189 325.02;
+  --s: 53.92% 0.162 241.36;
+  --a: 75.98% 0.204 56.72;
+  --n: 27.8078% 0.029596 256.847952;
+  --b1: 100% 0 0;
+  --bc: 27.8078% 0.029596 256.847952;
 }
 
-:root:has(input.theme-controller[value=dark]:checked) {
-  color-scheme: dark;
+:root:has(input.theme-controller[value=fantasy]:checked) {
+  color-scheme: light;
+  --b2: 93% 0 0;
+  --b3: 86% 0 0;
   --in: 72.06% 0.191 231.6;
   --su: 64.8% 0.150 160;
   --wa: 84.71% 0.199 83.87;
   --er: 71.76% 0.221 22.18;
-  --pc: 13.138% 0.0392 275.75;
-  --sc: 14.96% 0.052 342.55;
-  --ac: 14.902% 0.0334 183.61;
+  --pc: 87.49% 0.0378 325.02;
+  --sc: 90.784% 0.0324 241.36;
+  --ac: 15.196% 0.0408 56.72;
+  --nc: 85.5616% 0.005919 256.847952;
   --inc: 0% 0 0;
   --suc: 0% 0 0;
   --wac: 0% 0 0;
@@ -705,15 +673,78 @@ html {
   --border-btn: 1px;
   --tab-border: 1px;
   --tab-radius: 0.5rem;
-  --p: 65.69% 0.196 275.75;
-  --s: 74.8% 0.26 342.55;
-  --a: 74.51% 0.167 183.61;
-  --n: 31.3815% 0.021108 254.139175;
-  --nc: 74.6477% 0.0216 264.435964;
-  --b1: 25.3267% 0.015896 252.417568;
-  --b2: 23.2607% 0.013807 253.100675;
-  --b3: 21.1484% 0.01165 254.087939;
-  --bc: 74.6477% 0.0216 264.435964;
+  --p: 37.45% 0.189 325.02;
+  --s: 53.92% 0.162 241.36;
+  --a: 75.98% 0.204 56.72;
+  --n: 27.8078% 0.029596 256.847952;
+  --b1: 100% 0 0;
+  --bc: 27.8078% 0.029596 256.847952;
+}
+
+[data-theme=winter] {
+  color-scheme: light;
+  --pc: 91.372% 0.051 257.57;
+  --sc: 88.5103% 0.03222 282.339433;
+  --ac: 11.988% 0.038303 335.171434;
+  --nc: 83.9233% 0.012704 257.651965;
+  --inc: 17.6255% 0.017178 214.515264;
+  --suc: 16.0988% 0.015404 197.823719;
+  --wac: 17.8345% 0.009167 71.47031;
+  --erc: 14.6185% 0.022037 20.076293;
+  --rounded-box: 1rem;
+  --rounded-btn: 0.5rem;
+  --rounded-badge: 1.9rem;
+  --animation-btn: 0.25s;
+  --animation-input: .2s;
+  --btn-focus-scale: 0.95;
+  --border-btn: 1px;
+  --tab-border: 1px;
+  --tab-radius: 0.5rem;
+  --p: 56.86% 0.255 257.57;
+  --s: 42.5516% 0.161098 282.339433;
+  --a: 59.9398% 0.191515 335.171434;
+  --n: 19.6166% 0.063518 257.651965;
+  --b1: 100% 0 0;
+  --b2: 97.4663% 0.011947 259.822565;
+  --b3: 93.2686% 0.016223 262.751375;
+  --bc: 41.8869% 0.053885 255.824911;
+  --in: 88.1275% 0.085888 214.515264;
+  --su: 80.4941% 0.077019 197.823719;
+  --wa: 89.1725% 0.045833 71.47031;
+  --er: 73.0926% 0.110185 20.076293;
+}
+
+:root:has(input.theme-controller[value=winter]:checked) {
+  color-scheme: light;
+  --pc: 91.372% 0.051 257.57;
+  --sc: 88.5103% 0.03222 282.339433;
+  --ac: 11.988% 0.038303 335.171434;
+  --nc: 83.9233% 0.012704 257.651965;
+  --inc: 17.6255% 0.017178 214.515264;
+  --suc: 16.0988% 0.015404 197.823719;
+  --wac: 17.8345% 0.009167 71.47031;
+  --erc: 14.6185% 0.022037 20.076293;
+  --rounded-box: 1rem;
+  --rounded-btn: 0.5rem;
+  --rounded-badge: 1.9rem;
+  --animation-btn: 0.25s;
+  --animation-input: .2s;
+  --btn-focus-scale: 0.95;
+  --border-btn: 1px;
+  --tab-border: 1px;
+  --tab-radius: 0.5rem;
+  --p: 56.86% 0.255 257.57;
+  --s: 42.5516% 0.161098 282.339433;
+  --a: 59.9398% 0.191515 335.171434;
+  --n: 19.6166% 0.063518 257.651965;
+  --b1: 100% 0 0;
+  --b2: 97.4663% 0.011947 259.822565;
+  --b3: 93.2686% 0.016223 262.751375;
+  --bc: 41.8869% 0.053885 255.824911;
+  --in: 88.1275% 0.085888 214.515264;
+  --su: 80.4941% 0.077019 197.823719;
+  --wa: 89.1725% 0.045833 71.47031;
+  --er: 73.0926% 0.110185 20.076293;
 }
 
 .tooltip-arrow,.tooltip-arrow:before {
@@ -9671,6 +9702,19 @@ html:has(.drawer-open.drawer-open) {
   padding: 1.25rem;
 }
 
+.bungkus_content_header {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 1024px) {
+  .bungkus_content_header {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0.5rem;
+  }
+}
+
 .products_image {
   display: flex;
   flex-direction: column;
@@ -9679,10 +9723,39 @@ html:has(.drawer-open.drawer-open) {
   gap: 0.75rem;
 }
 
+@media (min-width: 768px) {
+  .products_image {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1024px) {
+  .products_details {
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+  }
+}
+
 .img_satu {
   height: 290px;
   width: 100%;
   border-radius: 0.5rem;
+}
+
+@media (min-width: 768px) {
+  .img_satu {
+    order: 9999;
+    grid-column: span 3 / span 3;
+    height: 350px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .img_satu {
+    height: 530px;
+  }
 }
 
 .img_satu img {
@@ -9701,12 +9774,33 @@ html:has(.drawer-open.drawer-open) {
   width: 100%;
   align-items: center;
   justify-content: space-evenly;
+  gap: 0.5rem;
+}
+
+@media (min-width: 768px) {
+  .other_preview {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 1024px) {
+  .other_preview {
+    gap: 1rem;
+  }
 }
 
 .other_img {
   height: 106px;
   width: 111px;
   border-radius: 0.5rem;
+}
+
+@media (min-width: 1280px) {
+  .other_img {
+    height: 167px;
+    width: 152px;
+  }
 }
 
 .other_img img {
@@ -9719,6 +9813,47 @@ html:has(.drawer-open.drawer-open) {
      object-position: center;
 }
 
+.title_products {
+  font-size: 30px;
+  font-weight: 800;
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.price {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+.price .normal-price {
+  font-size: 25px;
+  font-weight: 800;
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.price .discount-price {
+  font-size: 25px;
+  font-weight: 800;
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+  text-decoration-line: line-through;
+}
+
+.price .discount {
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 213 213 / var(--tw-bg-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  font-size: 14px;
+  --tw-text-opacity: 1;
+  color: rgb(249 128 128 / var(--tw-text-opacity));
+}
+
 .rating:not(:checked) > input {
   position: absolute;
   -webkit-appearance: none;
@@ -9729,15 +9864,15 @@ html:has(.drawer-open.drawer-open) {
 
 .rating:not(:checked) > label {
   float: right;
+  height: 1.25rem;
+  width: 1.25rem;
   cursor: pointer;
   fill: #E5E7EB;
-  font-size: 1.125rem;
-  line-height: 1.75rem;
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
-.rating:not(:checked) > label > i {
+.rating:not(:checked) > label > svg {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
   transition-property: all;
@@ -9763,7 +9898,7 @@ html:has(.drawer-open.drawer-open) {
   color: rgb(250 202 21 / var(--tw-text-opacity));
 }
 
-.rating > input:checked ~ label > i {
+.rating > input:checked ~ label > svg {
   fill: #FACA15;
   --tw-text-opacity: 1;
   color: rgb(250 202 21 / var(--tw-text-opacity));
@@ -9849,11 +9984,6 @@ html:has(.drawer-open.drawer-open) {
   right: 0px;
 }
 
-.inset-y-0 {
-  top: 0px;
-  bottom: 0px;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
@@ -9912,10 +10042,6 @@ html:has(.drawer-open.drawer-open) {
 
 .isolation-auto {
   isolation: auto;
-}
-
-.-z-10 {
-  z-index: -10;
 }
 
 .-z-30 {
@@ -9990,6 +10116,11 @@ html:has(.drawer-open.drawer-open) {
   clear: none;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -10023,12 +10154,12 @@ html:has(.drawer-open.drawer-open) {
   margin-left: 0.5rem;
 }
 
-.mr-2 {
-  margin-right: 0.5rem;
+.ml-4 {
+  margin-left: 1rem;
 }
 
-.mr-4 {
-  margin-right: 1rem;
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .mt-1 {
@@ -10041,6 +10172,10 @@ html:has(.drawer-open.drawer-open) {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-5 {
@@ -10210,10 +10345,6 @@ html:has(.drawer-open.drawer-open) {
   width: 2rem;
 }
 
-.w-\[250px\] {
-  width: 250px;
-}
-
 .w-\[this-is\\\\\] {
   width: this-is\\;
 }
@@ -10232,6 +10363,10 @@ html:has(.drawer-open.drawer-open) {
 
 .max-w-lg {
   max-width: 32rem;
+}
+
+.max-w-md {
+  max-width: 28rem;
 }
 
 .flex-1 {
@@ -10310,11 +10445,6 @@ html:has(.drawer-open.drawer-open) {
 
 .translate-y-0 {
   --tw-translate-y: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-16 {
-  --tw-translate-y: 4rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -11406,6 +11536,21 @@ html:has(.drawer-open.drawer-open) {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity)) !important;
 }
 
+.bg-\[\#2b2d48\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 45 72 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#36544e\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(54 84 78 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#5b4a33\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(91 74 51 / var(--tw-bg-opacity));
+}
+
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
@@ -11616,6 +11761,10 @@ html:has(.drawer-open.drawer-open) {
   padding: 2.5rem;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-2\.5 {
   padding: 0.625rem;
 }
@@ -11649,6 +11798,11 @@ html:has(.drawer-open.drawer-open) {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4 {
@@ -11766,10 +11920,6 @@ html:has(.drawer-open.drawer-open) {
 
 .align-super {
   vertical-align: super;
-}
-
-.font-sans {
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-2xl {
@@ -12183,6 +12333,12 @@ html:has(.drawer-open.drawer-open) {
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
